@@ -1,4 +1,4 @@
-#include "defs.h"
+#include "geo_incode_defs.h"
 datafile_rows_t pcs_row_0[] = {"COORD_REF_SYS_CODE","COORD_REF_SYS_NAME","UOM_CODE","SOURCE_GEOGCRS_CODE","COORD_OP_CODE","COORD_OP_METHOD_CODE","SHOW_CRS","DEPRECATED","PARAMETER_CODE_1","PARAMETER_VALUE_1","PARAMETER_UOM_1","PARAMETER_CODE_2","PARAMETER_VALUE_2","PARAMETER_UOM_2","PARAMETER_CODE_3","PARAMETER_VALUE_3","PARAMETER_UOM_3","PARAMETER_CODE_4","PARAMETER_VALUE_4","PARAMETER_UOM_4","PARAMETER_CODE_5","PARAMETER_VALUE_5","PARAMETER_UOM_5","PARAMETER_CODE_6","PARAMETER_VALUE_6","PARAMETER_UOM_6","PARAMETER_CODE_7","PARAMETER_VALUE_7","PARAMETER_UOM_7 ",NULL};
 datafile_rows_t pcs_row_1[] = {"2000","Anguilla 1957 / British West Indies Grid","9001","4600","19942","9807","1","0","8801","0","9102","8802","-62","9102","8807","0","9001","8805","0.9995","9201","8806","400000","9001","","","","",""," ",NULL};
 datafile_rows_t pcs_row_2[] = {"2001","Antigua 1943 / British West Indies Grid","9001","4601","19942","9807","1","0","8801","0","9102","8802","-62","9102","8807","0","9001","8805","0.9995","9201","8806","400000","9001","","","","",""," ",NULL};
